# safety-tooling

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REPO_GUIDE.md  pyproject.toml  requirements.txt  test_secrets.py
.github/workflows/: lint_and_test.yml  tests.yml
docker/claude-code-runner/: Dockerfile
examples/anthropic_batch_api/: batch_api.ipynb  run_anthropic_batch.py
examples/internals/: meandiff_refusal_direction.ipynb  playing_with_eleuther_saes.ipynb  playing_with_goodfire_saes.ipynb
examples/litellm/: litellm_testing.ipynb
examples/open_ai_batch_api/: batch_api.ipynb
safetytooling/apis/: __init__.py  batch_api.py  utils.py
safetytooling/apis/inference/: anthropic.py  api.py  cache_manager.py  deepinfra.py  deepseek.py  gray_swan.py  huggingface.py  model.py  openrouter.py  progress_monitor.py  runpod_vllm.py  sqlite_cache_manager.py  together.py
safetytooling/apis/tts/: elevenlabs.py
safetytooling/data_models/: __init__.py  dataset.py  finetune.py  inference.py  messages.py  utils.py
safetytooling/infra/: __init__.py
safetytooling/infra/cloud_run/: README.md  __init__.py  claude_code_client.py  claude_code_job.py  cloud_run_client.py  cloud_run_job.py
safetytooling/internals/: feature_database.py  model_loader.py  model_wrapper.py  sae_wrappers.py  utils.py  visuals.py
safetytooling/utils/: audio_utils.py  caching_utils.py  experiment_utils.py  hf_utils.py  human_labeling_utils.py  image_utils.py  jailbreak_metrics.py  math_utils.py  openai_utils.py  prompt_utils.py  text_utils.py  tool_utils.py  utils.py  vllm_utils.py
scripts/: README_runpod_ssh.md  runpod_ssh_config.py
tests/: conftest.py  test_anthropic.py  test_api.py  test_api_cache.py  test_batch_api.py  test_batch_prompt.py  test_cache_manager.py  test_cloud_run_caching.py  test_cloud_run_integration.py  test_inference_api.py  test_other_apis.py  test_sqlite_cache_manager.py  test_utils.py  test_vpc_egress.py
(+19 files in other folders)
