# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "safetytooling"
description = "Safety Tooling"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "openai",
    "anthropic",
    "google-cloud-aiplatform",
    "google-generativeai",
    "together",
    "elevenlabs",
    "datasets",
    "transformers",
    "wandb",
    "pydub",
    "python-io",
    "soundfile",
    "librosa",
    "numpy",
    "opencv-python",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "seaborn",
    "pydantic",
    "jsonlines",
    "Jinja2",
    "tenacity",
    "termcolor",
    "tqdm",
    "simple-parsing",
    "tiktoken",
    "redis",
    "dotenv",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "huggingface_hub",
]

[tool.setuptools]
packages = ["safetytooling"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning:pydub.utils"
]

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]
extend-exclude = ["submodules"]

# Line length 120 to makes it easier to have multiple files open side-by-side.
line-length = 120

[tool.ruff.lint]
# Check that imports are sorted
extend-select = ["I"]

[tool.ruff.lint.isort]
# wandb is a package, but sometimes also a folder that gets created.
# We tell ruff to treat it always as a third-party package to make import
# sorting consistent.
known-third-party = ["wandb"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''